--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_DB_URI=mongodb://localhost:27017/
 DB_NAME=productosProyectoFinal
+MONGOATLAS_DB_URI=mongodb+srv://coderhouse:coderejercicio@cluster0.fr8bi.mongodb.net/
+DBATLAS_NAME=coderhouseproject
