tercer entrega, avances

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_DB_URI=mongodb://localhost:27017/
 DB_NAME=productosProyectoFinal
 MONGOATLAS_DB_URI=mongodb+srv://coderhouse:coderejercicio@cluster0.fr8bi.mongodb.net/
 DBATLAS_NAME=coderhouseproject
+DBATLAS_SESSION=session-coderhouseproject
+SECRET='1987319'
+BASE_URL=https://finalprojectcoderhouse.herokuapp.com/
