--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "joi": "^17.4.3",
+    "mime-types": "^2.1.34",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
-    "nodemon": "^2.0.13"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.13",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
