--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.6",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -15,6 +17,7 @@
     "express-session": "^1.17.2",
     "joi": "^17.4.3",
     "mime-types": "^2.1.34",
+    "mocha": "^9.2.1",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
     "multer": "^1.4.4",
@@ -25,7 +28,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "dev": "nodemon index.js"
   },
   "author": "",
