--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "chai": "^4.3.6",
@@ -16,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "joi": "^17.4.3",
+    "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.34",
     "mocha": "^9.2.1",
     "mongodb": "^4.2.1",
