--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ MONGOATLAS_DB_URI=mongodb+srv://coderhouse:coderejercicio@cluster0.fr8bi.mongodb
 DBATLAS_NAME=coderhouseproject
 DBATLAS_SESSION=session-coderhouseproject
 SECRET='1987319'
+NODEMAILER_EMAIL='backendcoderhouse.project@gmail.com'
+NODEMAILER_PASS='nsyaireowufalton'
 BASE_URL=https://finalprojectcoderhouse.herokuapp.com/
