--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "express-session": "^1.17.2",
     "joi": "^17.4.3",
     "jsonwebtoken": "^8.5.1",
+    "log4js": "^6.4.4",
     "mime-types": "^2.1.34",
     "mocha": "^9.2.1",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
     "multer": "^1.4.4",
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.13",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {},
   "scripts": {
